--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
+        "laravel/passport": "~4.0",
         "laravel/tinker": "~1.0",
         "liyu/dingo-serializer-switch": "^0.3.0",
         "mews/captcha": "~2.0",
